--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+<!DOCTYPE html> <!--declaration defines that this document is an HTML5 document-->
+<html lang="en"> <!--element is the root element of an HTML page
+-->
+<head> <!--element contains meta information about the HTML page-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Component Library</title>
+    <title>Component Library</title>  <!--Page Title : element specifies a title for the HTML page (which is shown in the browser's title bar or in the page's tab)-->
 </head>
-<body>
-      <h1>Welcome to Nitesh_Rai's Component Library.</h1>
-      <p>I am attending neoG.camp and I want to make a library which would make all my projects look good and consistent.</p>
+<body> <!-- element defines the document's body, and is a container for all the visible contents, such as headings, paragraphs, images, hyperlinks, tables, lists, etc.-->
+      <h1>Welcome to Nitesh_Rai's Component Library.</h1> <!--My First Heading : element defines a large heading.-->
+      <p>I am attending neoG.camp and I want to make a library which would make all my projects look good and consistent.</p><!--My first paragraph : element defines a paragraph-->
        
 
        <hr>
@@ -34,9 +35,74 @@
 
        <h2>@Links</h2>
 
-       <a href="/">Primary Link</a>
+       <a href="/">Primary Link</a>  <!--<a> : anchor tag -->>
        <a href="/">Secondary Link</a>
 
+       <hr>
+
+       <h2>@lists</h2>
+       <h3>unordered list</h3>
+
+       <ul>
+           <li>Item One</li>
+           <li>Item Two</li>
+           <li>Item Three</li>
+
+       </ul>
+
+       <h3>unordered inline list</h3>
+
+       <ul>
+           <li>Inline Item One</li>
+           <li>Inline Item Two</li>
+           <li>Inline Item Three</li>
+       </ul>
+
+        <h3> reverse ordered list</h3>
+
+        <ol>
+            <li>milk</li>
+            <li>eggs</li>
+            <li>break</li>
+        </ol>
+
+
+    <hr>
+
+    <h2>@nav</h2>
+
+    <nav>
+        <div>I_Am_A_Brand</div>
+        <ul>
+            <li>
+                <a href="/">home</a>
+            </li>
+            <li>
+                <a href="/">products</a>   
+            </li>
+            <li>
+                <a href="/">about</a>
+            </li>
+        </ul>
+
+    </nav>
+
+    <hr>
+
+    <h2>header</h2>
+
+    <header>
+        <img src="images/hero.svg">
+        <h1>heading inside hero</h1>
+    
+    </header>
+
+
+
+
+
+       <div style="height: 30vh;">
+        </div>
 
 
 
