--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <h2>header</h2>
 
     <header>
-        <img src="images/hero.svg">
+        <img src="https://res.cloudinary.com/dmsxwwfb5/image/upload/v1595866967/full-stack-devlopment-min.png">
         <h1>heading inside hero</h1>
     
     </header>
