--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <!--element is the root element of an HTML page
 -->
 
+
+<!--Anything will be in head is not useful.-->
 <head>
     <!--element contains meta information about the HTML page-->
     <meta charset="UTF-8">
@@ -13,6 +15,7 @@
     <!--Page Title : element specifies a title for the HTML page (which is shown in the browser's title bar or in the page's tab)-->
 </head>
 
+<!-- This part is always visible. -->
 <body>
     <!-- element defines the document's body, and is a container for all the visible contents, such as headings, paragraphs, images, hyperlinks, tables, lists, etc.-->
     <h1>Welcome to Nitesh_Rai's Component Library.</h1>
@@ -113,6 +116,7 @@
     <h2>@section</h2>
     <h3>@white section</h3>
 
+    <!-- Different part of a same topic. -->
     <section>
         <p>This will have white background.</p>
     </section>
@@ -122,6 +126,9 @@
         <p>This will have gray background.</p>
     </section>
 
+<!--  end part of the page. -->
+    <hr> <!-- <hr> : The Thematic Break (Horizontal Rule) element -->
+    <h2>@footer</h2>
     <footer>
         <div> Some small heading inside footer</div>
         <ul>
@@ -130,6 +137,8 @@
             <li>socialThree</li>
         </ul>
     </footer>
+
+    
 
 
 
