--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Component Library</title>
     <!--Page Title : element specifies a title for the HTML page (which is shown in the browser's title bar or in the page's tab)-->
+    <style>
+        body {
+            color:forestgreen;
+        }
+    </style>
+
+
 </head>
 
 <!-- This part is always visible. -->
