updated some css details.

--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Component Library</title>
     <!--Page Title : element specifies a title for the HTML page (which is shown in the browser's title bar or in the page's tab)-->
-    <style>
+
+    <!-- CSS way 1 : Style Tag -->
+    <!-- <style>             //this is a style tag
         body {
             color:forestgreen;
         }
-    </style>
+    </style> -->
 
 
 </head>
@@ -25,7 +27,7 @@
 <!-- This part is always visible. -->
 <body>
     <!-- element defines the document's body, and is a container for all the visible contents, such as headings, paragraphs, images, hyperlinks, tables, lists, etc.-->
-    <h1>Welcome to Nitesh_Rai's Component Library.</h1>
+    <h1 style="color:red" >Welcome to Nitesh_Rai's Component Library.</h1>
     <!--My First Heading : element defines a large heading.-->
     <p>I am attending neoG.camp and I want to make a library which would make all my projects look good and consistent.
     </p>
