updates css codes

--- a/index.html
+++ b/index.html
@@ -21,13 +21,22 @@
         }
     </style> -->
 
+    <!-- CSS 3rd way : external link -->
+    <link href="styles.css" rel ="stylesheet">
+ 
+
+
 
 </head>
 
 <!-- This part is always visible. -->
 <body>
     <!-- element defines the document's body, and is a container for all the visible contents, such as headings, paragraphs, images, hyperlinks, tables, lists, etc.-->
-    <h1 style="color:red" >Welcome to Nitesh_Rai's Component Library.</h1>
+
+    <!-- CSS way 2 : style="color:red"  -->
+    <!-- <h1 style="color:red" >Welcome to Nitesh_Rai's Component Library.</h1> -->
+
+    <h1  >Welcome to Nitesh_Rai's Component Library.</h1>
     <!--My First Heading : element defines a large heading.-->
     <p>I am attending neoG.camp and I want to make a library which would make all my projects look good and consistent.
     </p>
