--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </style> -->
 
     <!-- CSS 3rd way : external link -->
-    <link href="styles.css" rel ="stylesheet">
+    <link href="styles.css" rel ="stylesheet" />
  
 
 
@@ -36,7 +36,7 @@
     <!-- CSS way 2 : style="color:red"  -->
     <!-- <h1 style="color:red" >Welcome to Nitesh_Rai's Component Library.</h1> -->
 
-    <h1  >Welcome to Nitesh_Rai's Component Library.</h1>
+    <h1>Welcome to Nitesh_Rai's Component Library.</h1>
     <!--My First Heading : element defines a large heading.-->
     <p>I am attending neoG.camp and I want to make a library which would make all my projects look good and consistent.
     </p>
