--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <h1>This is the biggest heading.</h1>
     <h2>This is the second biggest.</h2>
     <p>This is the normal text.This is free flowing and will wrap at the end like a paragraph.</p>
+    <p>This paragraph will have a <strong>bold</strong>text</p>>
     <small>This is relatively very smaller text.</small>
 
     <hr>
