--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <h1>This is the biggest heading.</h1>
     <h2>This is the second biggest.</h2>
     <p>This is the normal text.This is free flowing and will wrap at the end like a paragraph.</p>
-    <p>This paragraph will have a <strong>bold</strong>text</p>>
+    <p>This paragraph will have a <strong>bold</strong> text</p>>
     <small>This is relatively very smaller text.</small>
 
     <hr>
@@ -47,10 +47,10 @@
     <h2>@container</h2>
 
     <h3>fluid container</h3>
-    <div>This is a fluid container and it will go till the end of the page.</div>
+    <div class="container">This is a fluid container and it will go till the end of the page.</div>
 
     <h3>center container</h3>
-    <div >This is a centered container and it will go till the specified width.</div>
+    <div class="container container-center" >This is a centered container and it will go till the specified width.</div>
 
     <hr>
 
