--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <title>Component Library</title>
     <!--Page Title : element specifies a title for the HTML page (which is shown in the browser's title bar or in the page's tab)-->
 
+    <!-- Updated link below to conect style.css page -->
+    <link href="styles.css" rel ="stylesheet" />
+
 
 
 </head>
@@ -56,16 +59,18 @@
 
     <h2>@Links</h2>
 
-    <a href="/">Primary Link</a>
+    <a class="link link-primary" href="/">Primary Link</a>
     <!--<a> : anchor tag -->>
-    <a href="/">Secondary Link</a>
+    <a class="link link-secondary" href="/">Secondary Link</a>
+
 
     <hr>
 
     <h2>@lists</h2>
     <h3>unordered list</h3>
+    <p>This list will not have the bullets.</p>>
 
-    <ul>
+    <ul class="list-non-bullet">
         <li>Item One</li>
         <li>Item Two</li>
         <li>Item Three</li>
@@ -74,15 +79,15 @@
 
     <h3>unordered inline list</h3>
 
-    <ul>
-        <li>Inline Item One</li>
-        <li>Inline Item Two</li>
-        <li>Inline Item Three</li>
+    <ul class="list-non-bullet">
+        <li class="list-item-inline">Inline Item One</li>
+        <li class="list-item-inline">Inline Item Two</li>
+        <li class="list-item-inline">Inline Item Three</li>
     </ul>
 
     <h3> reverse ordered list</h3>
 
-    <ol>
+    <ol reversed>
         <li>milk</li>
         <li>eggs</li>
         <li>break</li>
