--- a/index.html
+++ b/index.html
@@ -166,12 +166,27 @@
     <!--  end part of the page. -->
     <hr> <!-- <hr> : The Thematic Break (Horizontal Rule) element -->
     <h2>@footer</h2>
-    <footer>
-        <div> Some small heading inside footer</div>
+    <footer class="footer">
+        <div class="social-links list-non-bullet"> Some small heading inside footer</div>
         <ul>
-            <li>socialOne</li>
-            <li>socialTwo</li>
-            <li>socialThree</li>
+            <li class="list-item-inline">
+                <a class = "link" href="/">
+                socialOne
+                </a>
+            </li>
+
+            <li class="list-item-inline">
+                <a class = "link" href="/">
+                    socialTwo
+                </a>
+                
+            </li>
+
+            <li class="list-item-inline">
+                <a class = "link" href="/">
+                    socialThree
+                </a>
+            </li>
         </ul>
     </footer>
 
