--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
                 <a class="link link-active" href="/">Home</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="/">Projects</a>
+                <a class="link" href="/projects.html">Projects</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="/">Blogs</a>
+                <a class="link" href="/blogs.html">Blogs</a>
             </li>
         </ul>
 
     </nav>
 
     <header class="hero">
-        <img class="hero-img" src="/images/hero.svg">
+        <img class="hero-img" src="images/hero.svg">
         <h1 class="hero-heading">Nitesh Rai <span class="heading-inverted">The Full Stack Web Developer</span></h1>
 
     </header>
