--- a/blogs.html
+++ b/blogs.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blogs</title>
+    <title>Blogs | Adarsh Balika</title>
     <link href="styles.css" rel="stylesheet"/>
 </head>
 <body>
@@ -26,7 +26,7 @@
     </nav>
 
     <header class="hero">
-        <img class="hero-img" src="/images/hero.svg">
+        <img class="hero-img" src="images/hero.svg">
         <h1 class="hero-heading">My<span class="heading-inverted"> Blogs</span></h1>
         <h2>This is  <a class="link link-primary" href="https://neog.camp/guide/lesson-three">Mark 5 Assignment.</a></h2>
 
