--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>home | Adarsh Balika</title>
-    <link href="styles.css" rel="stylesheet"/>
+    <link href="styles.css" rel="stylesheet" />
 </head>
+
 <body>
     <nav class="navigation container">
         <div class="nav-brand">Welcome to Nitesh Rai's Portfolio</div>
@@ -32,33 +34,34 @@
 
     <section class="section ow">
         <div class="container container">
-        <h1>Technologies</h1>
-        <!-- <p>This will have gray background.</p> -->
-        <p>I'm familiar with HTML5,CSS3,Git & GitHub,JavaScript,NodeJS,ReactJS, and Web Hosting.</p>
+            <h1>Technologies</h1>
+            <!-- <p>This will have gray background.</p> -->
+            <p>I'm familiar with HTML5,CSS3,Git & GitHub,JavaScript,NodeJS,ReactJS, and Web Hosting.</p>
 
-        <a class="link link-primary" href="/">See Technologies</a>
+            <a class="link link-primary" href="/">See Technologies</a>
 
         </div>
     </section>
 
     <section class="section ">
         <div class="container container">
-        <h1>Projects</h1>
-        <!-- <p>This will have gray background.</p> -->
-        <p>I like to showcase my work and thus, you can see my projects hosted online.</p>
+            <h1>Projects</h1>
+            <!-- <p>This will have gray background.</p> -->
+            <p>I like to showcase my work and thus, you can see my projects hosted online.</p>
 
-        <a class="link link-primary" href="/">See Projects</a>
+            <a class="link link-primary" href="/">See Projects</a>
 
         </div>
     </section>
 
     <section class="section ow">
         <div class="container container">
-        <h1>Blogs</h1>
-        <!-- <p>This will have gray background.</p> -->
-        <p>I am also working on some technical and non-technical blogs. I would like to document my journey by learning.</p>
+            <h1>Blogs</h1>
+            <!-- <p>This will have gray background.</p> -->
+            <p>I am also working on some technical and non-technical blogs. I would like to document my journey by
+                learning.</p>
 
-        <a class="link link-primary" href="/">Read Blogs</a>
+            <a class="link link-primary" href="/">Read Blogs</a>
 
         </div>
     </section>
@@ -67,21 +70,21 @@
         <div class="social-links list-non-bullet"> Connect with me Online at :</div>
         <ul>
             <li class="list-item-inline">
-                <a class = "link" href="https://github.com/niteshrai-0">
-                GitHub
+                <a class="link" href="https://github.com/niteshrai-0">
+                    GitHub
                 </a>
             </li>
 
             <li class="list-item-inline">
-                <a class = "link" href="https://www.linkedin.com/in/nitesh-rai-0/">
-                LinkedIn
+                <a class="link" href="https://www.linkedin.com/in/nitesh-rai-0/">
+                    LinkedIn
                 </a>
-                
+
             </li>
 
             <li class="list-item-inline">
-                <a class = "link" href="https://twitter.com/nrai00067">
-                Twitter
+                <a class="link" href="https://twitter.com/nrai00067">
+                    Twitter
                 </a>
             </li>
         </ul>
@@ -94,4 +97,5 @@
 
 
 </body>
+
 </html>
