--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,7 @@
         <div class="nav-brand">Welcome to Nitesh Rai's Portfolio</div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
-                <a class="link " href="/">Home</a>
+                <a class="link" href="/">Home</a>
             </li>
             <li class="list-item-inline">
                 <a class="link link-active" href="/projects.html">Projects</a>
@@ -24,6 +24,37 @@
         </ul>
 
     </nav>
+
+    <header class="hero">
+        <img class="hero-img" src="images/hero.svg">
+        <h1 class="hero-heading">See My <span class="heading-inverted">Projects</span></h1>
+
+    </header>
+
+    <ol reversed>
+
+        <li>
+            <h1>How well do you know me?</h1>
+            <small>September,2021</small>
+            <p> A CLI app built with <strong>NodeJS</strong>.You can send this to your friends and find out who really knows you.</p>>
+
+            <a class = "link link-primary" href= "https://replit.com/@technopedia2ind/How-well-you-Know-me#index.js">Live Projects</a>
+            <a class = "link link-secondary"href="https://github.com/niteshrai-0/Level-Zero-Project-1">
+            
+        </li>
+
+        <li>
+            <h1>Bahubali Fan Quiz</h1>
+            <small>September,2021</small>
+            <p> A CLI app built with <strong>NodeJS</strong>.You can send this to your friends and find out who were the Bahubali Fans.</p>>
+
+            <a class = "https://replit.com/@technopedia2ind/Bahubali-Ultimate-1#index.js">Live Projects</a>
+            <a class = "link link-secondary"href="https://github.com/niteshrai-0/Level-Zero-Project-2">
+            
+        </li>
+
+
+    </ol>
 
 
 
