--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <!-- <p>This will have gray background.</p> -->
             <p>I like to showcase my work and thus, you can see my projects hosted online.</p>
 
-            <a class="link link-primary" href="/">See Projects</a>
+            <a class="link link-primary" href="/projects.html">See Projects</a>
 
         </div>
     </section>
@@ -61,7 +61,7 @@
             <p>I am also working on some technical and non-technical blogs. I would like to document my journey by
                 learning.</p>
 
-            <a class="link link-primary" href="/">Read Blogs</a>
+            <a class="link link-primary" href="/blogs.html">Read Blogs</a>
 
         </div>
     </section>
