--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="nav-brand">Welcome to Nitesh Rai's Portfolio</div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
-                <a class="link link-active" href="/">Home</a>
+                <a class="link link-active" href="">Home</a>
             </li>
             <li class="list-item-inline">
                 <a class="link" href="projects.html">Projects</a>
