--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </nav>
 
     <header class="hero">
-        <img class="hero-img" src="\images\hero.svg">
+        <img class="hero-img" src="/images/hero.svg">
         <h1 class="hero-heading">Nitesh Rai <span class="heading-inverted">The Full Stack Web Developer</span></h1>
 
     </header>
