--- a/blogs.html
+++ b/blogs.html
@@ -15,13 +15,13 @@
         <div class="nav-brand">Welcome to Nitesh Rai's Portfolio</div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
-                <a class="link " href="">Home</a>
+                <a class="link " href="/">Home</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="projects.html">Projects</a>
+                <a class="link" href="/projects.html">Projects</a>
             </li>
             <li class="list-item-inline">
-                <a class="link link-active" href="blogs.html">Blogs</a>
+                <a class="link link-active" href="/blogs.html">Blogs</a>
             </li>
         </ul>
 
