--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home | Adarsh Balika</title>
+    <title>home | Nitesh_Rai</title>
     <link href="styles.css" rel="stylesheet" />
 </head>
 
@@ -27,13 +27,13 @@
     </nav>
 
     <header class="hero">
-        <img class="hero-img" src="images/hero.svg">
+        <img class="hero-img" src="/images/hero.svg" alt="" />
         <h1 class="hero-heading">Nitesh Rai <span class="heading-inverted">The Full Stack Web Developer</span></h1>
 
     </header>
 
     <section class="section ow">
-        <div class="container container">
+        <div class="container center-container">
             <h1>Technologies</h1>
             <!-- <p>This will have gray background.</p> -->
             <p>I'm familiar with HTML5,CSS3,Git & GitHub,JavaScript,NodeJS,ReactJS, and Web Hosting.</p>
@@ -42,7 +42,7 @@
     </section>
 
     <section class="section ">
-        <div class="container container">
+        <div class="container center-container">
             <h1>Projects</h1>
             <!-- <p>This will have gray background.</p> -->
             <p>I like to showcase my work and thus, you can see my projects hosted online.</p>
@@ -53,7 +53,7 @@
     </section>
 
     <section class="section ow">
-        <div class="container container">
+        <div class="container center-container">
             <h1>Blogs</h1>
             <!-- <p>This will have gray background.</p> -->
             <p>I am also working on some technical and non-technical blogs. I would like to document my journey by
