--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,7 @@
     <ul class="list-non-bullet">
 
         <li>
-            <div class="showcase-list container container-center">
+            <article class="showcase-list container container-center">
                 <h1>How well do you know me?</h1>
                 <small>September,2021</small>
                 <p> A CLI app built with <strong>NodeJS</strong>.You can send this to your friends and find out who
@@ -45,12 +45,12 @@
                     href="https://replit.com/@technopedia2ind/How-well-you-Know-me#index.js">Live Projects</a>
                 <a class="link link-secondary" href="https://github.com/niteshrai-0/Level-Zero-Project-1">
 
-            </div>
+            </article>
 
         </li>
 
         <li>
-            <div class="showcase-list container container-center">
+            <article class="showcase-list container container-center">
                 <h1>Bahubali Fan Quiz</h1>
                 <small>September,2021</small>
                 <p> A CLI app built with <strong>NodeJS</strong>.You can send this to your friends and find out who were
@@ -60,7 +60,7 @@
                     href="https://replit.com/@technopedia2ind/Bahubali-Ultimate-1#index.js">Live Projects</a>
                 <a class="link link-secondary" href="https://github.com/niteshrai-0/Level-Zero-Project-2">
 
-            </div>
+            </article>
 
         </li>
 
@@ -68,8 +68,8 @@
     </ul>
 
     <footer class="footer">
-        <div class="social-links list-non-bullet"> Connect with me Online at :</div>
-        <ul>
+        <div class="footer-header"> Connect with me Online at :</div>
+        <ul class="social-links list-non-bullet">
             <li class="list-item-inline">
                 <a class="link" href="https://github.com/niteshrai-0">
                     GitHub
