--- a/blogs.html
+++ b/blogs.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blogs | Adarsh Balika</title>
+    <title>Blogs | Nitesh_Rai</title>
     <link href="styles.css" rel="stylesheet" />
 </head>
 
@@ -45,7 +45,6 @@
 
                 <a class="link link-primary"
                     href="https://replit.com/@technopedia2ind/How-well-you-Know-me#index.js">Live Projects</a>
-                <a class="link link-secondary" href="https://github.com/niteshrai-0/Level-Zero-Project-1">
 
             </div>
 
@@ -60,7 +59,7 @@
 
                 <a class="link link-primary"
                     href="https://replit.com/@technopedia2ind/Bahubali-Ultimate-1#index.js">Live Projects</a>
-                <a class="link link-secondary" href="https://github.com/niteshrai-0/Level-Zero-Project-2">
+                
 
             </div>
 
@@ -71,7 +70,7 @@
 
     <footer class="footer">
         <div class="social-links list-non-bullet"> Connect with me Online at :</div>
-        <ul>
+        <ul class="social-links list-non-bullet">
             <li class="list-item-inline">
                 <a class="link" href="https://github.com/niteshrai-0">
                     GitHub
