--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
     </nav>
 
     <header class="hero">
-        <img class="hero-img" src="/images/hero.svg" alt="" />
+        <div class="container container-center">
+        <img class="hero-img" src="images/hero.svg" />
         <h1 class="hero-heading">Nitesh Rai <span class="heading-inverted">The Full Stack Web Developer</span></h1>
+        </div>>
 
     </header>
 
