--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <header class="hero">
         <div class="container container-center">
         <img class="hero-img" src="images/hero.svg" />
-        <h1 class="hero-heading">Nitesh Rai <span class="heading-inverted">The Full Stack Web Developer</span></h1>
+        <h1 class="hero-heading">Nitesh Rai <span class="heading-inverted">The Aspiring Full Stack Web Developer</span></h1>
         </div>>
 
     </header>
@@ -38,7 +38,7 @@
         <div class="container center-container">
             <h1>Technologies</h1>
             <!-- <p>This will have gray background.</p> -->
-            <p>I'm familiar with HTML5,CSS3,Git & GitHub,JavaScript,NodeJS,ReactJS, and Web Hosting.</p>
+            <p>I'm familiar with HTML5, CSS3, Git & GitHub, JavaScript, NodeJS, ReactJS, and Web Hosting.</p>
 
         </div>
     </section>
