--- a/projects.html
+++ b/projects.html
@@ -64,6 +64,34 @@
 
         </li>
 
+        <li>
+            <article class="showcase-list container container-center">
+                <h1>First Online Website Hosting</h1>
+                <small>September,2021</small>
+                <p> A CLI app built using HTML and <strong>hosted using Netlify.</strong>.You can see this project's source code and online hosted site given on Github.</p>
+
+                <a class="link link-primary"
+                    href="portfolio-creation.netlify.app/">Live Projects</a>
+               
+
+            </article>
+
+        </li>
+
+        <li>
+            <article class="showcase-list container container-center">
+                <h1>Creating My Portfolio website using HTML,CSS </h1>
+                <small>September,2021</small>
+                <p> A CLI app built using HTML and CSS <strong>for creating a Work Portfolio hosted using Netlify.</strong>.You can see this project's online hosted site below and source code from view source code button given below..</p>
+
+                <a class="link link-primary"
+                    href="niteshraiportfolio.netlify.app">Live Projects</a>
+               
+
+            </article>
+
+        </li>
+
 
     </ul>
 
