--- a/projects.html
+++ b/projects.html
@@ -42,7 +42,7 @@
                     really knows you.</p>
 
                 <a class="link link-primary"
-                    href="https://replit.com/@technopedia2ind/How-well-you-Know-me#index.js">Live Projects</a>
+                    href="https://replit.com/@technopedia2ind/How-well-you-Know-me?embed=1&output=1">Live Projects</a>
                 
 
             </article>
@@ -57,7 +57,7 @@
                     the Bahubali Fans.</p>
 
                 <a class="link link-primary"
-                    href="https://replit.com/@technopedia2ind/Bahubali-Ultimate-1#index.js">Live Projects</a>
+                    href="https://replit.com/@technopedia2ind/Bahubali-Ultimate-1?embed=1&output=1">Live Projects</a>
                
 
             </article>
