--- a/projects.html
+++ b/projects.html
@@ -80,7 +80,7 @@
 
         <li>
             <article class="showcase-list container container-center">
-                <h1>Creating My Portfolio website using HTML,CSS </h1>
+                <h1>Dynamic Portfolio Website using HTML,CSS </h1>
                 <small>September,2021</small>
                 <p> A CLI app built using HTML and CSS <strong>for creating a Work Portfolio hosted using Netlify.</strong>You can see this project's online hosted site below and source code from view source code button given below.</p>
 
