--- a/projects.html
+++ b/projects.html
@@ -44,6 +44,9 @@
                 <a class="link link-primary"
                     href="https://replit.com/@technopedia2ind/How-well-you-Know-me?embed=1&output=1">Live Projects</a>
                 
+                <a class="link link-secondary"
+                    href="https://github.com/niteshrai-0/Level-Zero-Project-1/blob/main/index.js">View Source</a>
+                
 
             </article>
 
