--- a/blogs.html
+++ b/blogs.html
@@ -29,7 +29,7 @@
 
     <header class="hero">
         <h1 class="hero-heading">Read My<span class="heading-inverted"> Blogs</span></h1>
-        <h2>This is <a class="link link-primary" href="https://neog.camp/guide/lesson-three">Mark 5 Assignment.</a></h2>
+        <h2>These are some of my <a class="link link-primary" href="https://www.quora.com/profile/Nitesh-Rai-32/answers">Technical and Non-Technical Blogs.</a></h2>
 
     </header>
 
@@ -38,13 +38,12 @@
 
         <li>
             <div class="showcase-list container container-center">
-                <h1>How well do you know me?</h1>
+                <h1>Start your Journey.</h1>
                 <small>September,2021</small>
-                <p> A CLI app built with <strong>NodeJS</strong>.You can send this to your friends and find out who
-                    really knows you.</p>
+                <p> My first blog on LinkedIn which is based on <strong>Self-motivation, Hard Work and Consistency.</strong>.You can view this blog by clicking on the below "View Blog" button.</p>
 
                 <a class="link link-primary"
-                    href="https://replit.com/@technopedia2ind/How-well-you-Know-me#index.js">Live Projects</a>
+                    href="https://www.linkedin.com/feed/update/urn:li:activity:6841594655029690368/">View Blog</a>
 
             </div>
 
@@ -52,18 +51,18 @@
 
         <li>
             <div class="showcase-list container container-center">
-                <h1>Bahubali Fan Quiz</h1>
+                <h1>If one thing has to change in a person, what would that be?</h1>
                 <small>September,2021</small>
-                <p> A CLI app built with <strong>NodeJS</strong>.You can send this to your friends and find out who were
-                    the Bahubali Fans.</p>
+                <p> My blog on Quora which is based on <strong>Life, Persepective and Postivity.</strong>.You can view this blog by clicking on the below "View Blog" button.</p>
 
                 <a class="link link-primary"
-                    href="https://replit.com/@technopedia2ind/Bahubali-Ultimate-1#index.js">Live Projects</a>
-                
+                    href="https://www.quora.com/If-one-thing-has-to-change-in-a-person-what-would-that-be/answer/Nitesh-Rai-32">View Blog</a>
 
             </div>
 
         </li>
+
+        
 
 
     </ul>
