Updated footer social media links.

--- a/projects.html
+++ b/projects.html
@@ -110,20 +110,20 @@
         <div class="footer-header"> Connect with me Online at :</div>
         <ul class="social-links list-non-bullet">
             <li class="list-item-inline">
-                <a class="link" href="https://github.com/niteshrai-0">
+                <a class="link" href="https://github.com/rainitesh0">
                     GitHub
                 </a>
             </li>
 
             <li class="list-item-inline">
-                <a class="link" href="https://www.linkedin.com/in/nitesh-rai-0/">
+                <a class="link" href="https://www.linkedin.com/in/rainitesh0/">
                     LinkedIn
                 </a>
 
             </li>
 
             <li class="list-item-inline">
-                <a class="link" href="https://twitter.com/nrai00067">
+                <a class="link" href="https://twitter.com/rainitesh0">
                     Twitter
                 </a>
             </li>
