Updated broken link in the swastika project.

--- a/projects.html
+++ b/projects.html
@@ -147,7 +147,7 @@
                 <p> A basic Swastika Project in <strong>CSS</strong>..</p>
 
                 <a class="link link-primary"
-                    href="the-swastika-project.netlify.app">Live Projects</a>
+                    href="https://the-swastika-project.netlify.app/">Live Projects</a>
                 
                 <a class="link link-secondary"
                     href="https://github.com/rainitesh0/the-swastika-project/blob/main/index.html">View Source</a>
