--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     <header class="hero">
         <div class="container container-center">
         <img class="hero-img" src="images/hero.svg" />
-        <h1 class="hero-heading">Nitesh Rai <span class="heading-inverted">The Aspiring Full Stack Web Developer</span></h1>
+        <h1 class="hero-heading">Nitesh Rai</h1>
+        <h2><span class="heading-inverted">"Crafting products that exceed expectations"</span></h2>
         </div>>
 
     </header>
@@ -38,7 +39,7 @@
         <div class="container center-container">
             <h1>Technologies</h1>
             <!-- <p>This will have gray background.</p> -->
-            <p>I'm familiar with HTML5, CSS3, Git & GitHub, JavaScript, NodeJS, ReactJS, and Web Hosting.</p>
+            <p>I'm familiar with product tools and methodology like Agile methodology and Scrum framework, Jira, Freshdesk, Figma, Slack, Notion and Technical Knowledge like (HTML5, CSS3, Git & GitHub, JavaScript, NodeJS, ReactJS, and Web Hostin, Cloud Computing, Data Science etc.).</p>
 
         </div>
     </section>
